@@ -50,20 +50,8 @@ lib/SPVM/Net/SSLeay/Callback/AlpnSelect.pm
 lib/SPVM/Net/SSLeay/Callback/AlpnSelect.spvm
 lib/SPVM/Net/SSLeay/Callback/Msg.pm
 lib/SPVM/Net/SSLeay/Callback/Msg.spvm
-lib/SPVM/Net/SSLeay/Callback/NewSession.pm
-lib/SPVM/Net/SSLeay/Callback/NewSession.spvm
-lib/SPVM/Net/SSLeay/Callback/NextProtosAdvertised.pm
-lib/SPVM/Net/SSLeay/Callback/NextProtosAdvertised.spvm
-lib/SPVM/Net/SSLeay/Callback/NextProtoSelect.pm
-lib/SPVM/Net/SSLeay/Callback/NextProtoSelect.spvm
 lib/SPVM/Net/SSLeay/Callback/PemPassword.pm
 lib/SPVM/Net/SSLeay/Callback/PemPassword.spvm
-lib/SPVM/Net/SSLeay/Callback/PskClient.pm
-lib/SPVM/Net/SSLeay/Callback/PskClient.spvm
-lib/SPVM/Net/SSLeay/Callback/PskServer.pm
-lib/SPVM/Net/SSLeay/Callback/PskServer.spvm
-lib/SPVM/Net/SSLeay/Callback/RemoveSession.pm
-lib/SPVM/Net/SSLeay/Callback/RemoveSession.spvm
 lib/SPVM/Net/SSLeay/Callback/TlsextServername.pm
 lib/SPVM/Net/SSLeay/Callback/TlsextServername.spvm
 lib/SPVM/Net/SSLeay/Callback/Verify.pm
